--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     
+    <div id="container--main">
+
+        <section id="wrapper--hero" class="section--page">
+            <img src="./assets/images/pic.jpg"/>
+        </section>
+
+    </div>
 </body>
 </html>
