Updated some job info

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="card--techstack">
-                    <span>HTML, CSS, JavaScript, React</span>
+                    <span>HTML, CSS, JavaScript</span>
                 </div>
 
             </div>
@@ -67,7 +67,7 @@
             <h2>Work History</h2>
             <div class="line-break"></div>
             <div class="card--work-history reveal">
-                <strong>Software Product Engineer Intern | Intel Corporation</strong>
+                <strong>🎥 Software Product Engineer Intern | Intel Corporation</strong>
                 <p>May 2022 - Present</p>
                 <p>Improve and maintain cutting edge software video encoders</p>
                 <ul>
@@ -80,7 +80,7 @@
 
             <div class="line-break"></div>
             <div class="card--work-history reveal">
-                <strong>Private Piano Teacher | Self-employed </strong>
+                <strong>🎹 Private Piano Teacher | Self-employed </strong>
                 <p>Sept 2015 - Present</p>
                 <p>Trained over a dozen skilled piano performers</p>
                 <ul>
@@ -92,27 +92,24 @@
 
             <div class="line-break"></div>
             <div class="card--work-history reveal">
-                <strong>Software Product Engineer Intern | Intel Corporation</strong>
-                <p>May 2022 - Present</p>
-                <p>Stuff I did at Intel</p>
+                <strong>📋 Clinical Research Assistant | Providence Health Care</strong>
+                <p>May 2020 - Dec 2020</p>
+                <p>Managed 3+ orthopaedic studies to help improve the treatment of foot and ankle diseases</p>
                 <ul>
-                    <li>Stuff</li>
-                    <li>Stuff</li>
-                    <li>Stuff</li>
-                    <li>Stuff</li>
+                    <li>Created protocols for new and current studies for research during COVID-19</li>
+                    <li>Developed and managed several REDCap databases for survey data collection</li>
+                    <li>Compiled and analyzed data in Excel and produced reports for the surgeons/researchers</li>
                 </ul>
             </div>
 
             <div class="line-break"></div>
             <div class="card--work-history reveal">
-                <strong>Software Product Engineer Intern | Intel Corporation</strong>
-                <p>May 2022 - Present</p>
-                <p>Stuff I did at Intel</p>
+                <strong>🔬 Student Research Assistant | SignalChem Biotech Inc. </strong>
+                <p>Jan 2019 - Sep 2019</p>
+                <p>Produced 10+ custom proteins for clients</p>
                 <ul>
-                    <li>Stuff</li>
-                    <li>Stuff</li>
-                    <li>Stuff</li>
-                    <li>Stuff</li>
+                    <li>Performed various enzymatic assays for quality control to ensure customers received high quality proteins</li>
+                    <li>Successfully implemented and optimized the cloning workflow for creating custom proteins</li>
                 </ul>
             </div>
         </section>
