--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </div>
         
             <div class="card--project">
-                <a href="https://github.com/hdzhong/Quizlet-But-Worse" ><span>🏆 </span>Flashcards!</a>
+                <a href="https://github.com/hdzhong/Quizlet-But-Worse" target="_blank" ><span>🏆 </span>Flashcards!</a>
             </div>
 
         </section>
