updated work history

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img id="profile-pic" src="./assets/images/profile.png"/>
             <div>
                 <h1 id="user-name">Douglas Zhong</h1>
-                <p id ="bio">Software Product Engineer Intern @ Intel Corporation | Computer guy with a background in life sciences and a lover of music.</p>
+                <p id ="bio">Former Software Product Engineer Intern @ Intel Corporation | Computer guy with a background in life sciences and a lover of music.</p>
                 <a href="mailto: douglaszhong@gmail.com" target="_blank" id="email">📧 douglaszhong@gmail.com </a>
             </div>
         </section>
@@ -83,7 +83,7 @@
             <div class="line-break"></div>
             <div class="card--work-history reveal">
                 <strong>🎥 Software Product Engineer Intern | <a href="http://intel.ca" target="_blank">Intel Corporation</a> </strong>
-                <p>May 2022 - Present</p>
+                <p>May 2022 - Dec 2022</p>
                 <p>Improve and maintain cutting edge software video encoders</p>
                 <ul>
                     <li>Reduced up to 90% of time spent on testing workflows by introducing more automation to the pipeline</li>
