--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
 
         <section class="section--page reveal">
             <h2>Projects & Accomplishments (WIP)</h2>
-        
+            
+            <div class="card--project">
+                <a href="https://www.students.cs.ubc.ca/~hdzhong/project/public_html/login.php"><span>🏆 </span>Simple Anime Databases</a>
+            </div>
             <div class="card--project">
                 <a href="#"><span>🏆 </span>REDCap Database for Orthopaedic Studies</a>
             </div>
