--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <h2>Projects & Accomplishments (WIP)</h2>
             
             <div class="card--project">
-                <a href="https://www.students.cs.ubc.ca/~hdzhong/project/public_html/login.php"><span>🏆 </span>Simple Anime Databases</a>
+                <a href="https://www.students.cs.ubc.ca/~hdzhong/project/public_html/login.php" target="_blank"><span>🏆 </span>Simple Anime Databases</a>
             </div>
             <div class="card--project">
                 <a href="#"><span>🏆 </span>REDCap Database for Orthopaedic Studies</a>
