Updated resume; added gitlab link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <section class="section--page">
             <div id="socials--list">
                 <a href="https://www.linkedin.com/in/douglas-zhong/" target="_blank">LinkedIn</a>
-                <a href="https://github.com/hdzhong" target="_blank">Github</a>
+                <a href="https://github.com/hdzhong" target="_blank">GitHub</a>
+                <a href="https://gitlab.com/hdzhong" target="_blank">GitLab</a>
                 <a href="https://www.instagram.com/douglas.zhong/" target="_blank">Instagram</a>
                 <a href="./assets/resume.pdf" target="_blank">Resume</a>
             </div>
