--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img id="profile-pic" src="./assets/images/profile.png"/>
             <div>
                 <h1 id="user-name">Douglas Zhong</h1>
-                <p id ="bio">Former Software Product Engineer Intern @ Intel Corporation | Computer guy with a background in life sciences and a lover of music.</p>
+                <p id ="bio">Aspiring Software Engineer | Computer guy with a background in life sciences and a lover of music.</p>
                 <a href="mailto: douglaszhong@gmail.com" target="_blank" id="email">📧 douglaszhong@gmail.com </a>
             </div>
         </section>
