Updated to include latest internship

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img id="profile-pic" src="./assets/images/profile.png"/>
             <div>
                 <h1 id="user-name">Douglas Zhong</h1>
-                <p id ="bio">Former Software Product Engineer Intern @ Intel Corporation | Computer guy with a background in life sciences and a lover of music.</p>
+                <p id ="bio">Full-Stack Software Developer @ Powerex Corporation | Computer guy with a background in life sciences and a lover of music.</p>
                 <a href="mailto: douglaszhong@gmail.com" target="_blank" id="email">📧 douglaszhong@gmail.com </a>
             </div>
         </section>
@@ -61,6 +61,14 @@
                 </div>
 
                 <div class="card--techstack">
+                    <span>C#, .NET Framework</span>
+                </div>
+
+                <div class="card--techstack">
+                    <span>Oracle, Microsoft SQL Server, Snowflake</span>
+                </div>
+
+                <div class="card--techstack">
                     <span>Github, Gitlab</span>
                 </div>
 
@@ -85,6 +93,21 @@
 
         <section id="work-history-wrapper" class="section--page">
             <h2>Work History</h2>
+
+            <div class="line-break"></div>
+            <div class="card--work-history reveal">
+                <strong>⚡ Full-Stack Developer Intern | <a href="https://powerex.com/" target="_blank">Powerex Corporation</a> </strong>
+                <p>May 2023 - Present</p>
+                <p>Improve and maintain cutting edge software video encoders</p>
+                <ul>
+                    <li>Contributing to the design, development, and testing of dozens of applications</li>
+                    <li>Applied Agile methodologies in the fast-paced environment, collaborating with cross-functional teams, Business Analysts, and end-users to meet business and IT requirements</li>
+                    <li>Demonstrated initiative in problem-solving and the ability to quickly adapt to new applications, tools, methodologies, and business aspects, ensuring effective task management in a dynamic setting</li>
+                    <li>Proficient in developing and documenting application design specifications, actively contributing to process enhancement in areas of application support and troubleshooting</li>
+                    <li>Acquired hands-on experience with a variety of technologies, including C#, .NET Framework, Microsoft SQL Server, Oracle, and more, showcasing a well-rounded technical skill set.</li>
+                </ul>
+            </div>
+
             <div class="line-break"></div>
             <div class="card--work-history reveal">
                 <strong>🎥 Software Product Engineer Intern | <a href="http://intel.ca" target="_blank">Intel Corporation</a> </strong>
