--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img id="profile-pic" src="./assets/images/profile.png"/>
             <div>
                 <h1 id="user-name">Douglas Zhong</h1>
-                <p id ="bio">Full-Stack Software Developer @ Powerex Corporation | Computer guy with a background in life sciences and a lover of music.</p>
+                <p id ="bio">Software Engineer looking for new-grad positions | Computer guy with a background in life sciences and a lover of music.</p>
                 <a href="mailto: douglaszhong@gmail.com" target="_blank" id="email">📧 douglaszhong@gmail.com </a>
             </div>
         </section>
@@ -43,7 +43,7 @@
             <h2>Education</h2>
             <h3>University of British Columbia</h1>
             <ul id="skills">
-                <li>BCS in Computer Science, expected completion May 2024</li>
+                <li>BCS in Computer Science, expected completion Aug 2024</li>
                 <li>BSc in Microbiology and Immunology, 2016 - 2021</li>
             </ul>
             <h3>Coursera</h3>
@@ -97,7 +97,7 @@
             <div class="line-break"></div>
             <div class="card--work-history reveal">
                 <strong>⚡ Full-Stack Developer Intern | <a href="https://powerex.com/" target="_blank">Powerex Corporation</a> </strong>
-                <p>May 2023 - Present</p>
+                <p>Sept 2023 - May 2024</p>
                 <p>Improve and maintain cutting edge software video encoders</p>
                 <ul>
                     <li>Contributing to the design, development, and testing of dozens of applications</li>
